UIUX-1829: prevent right column record cell from shifting when left column record cell is empty

--- a/sugarcrm/styleguide/less/clients/base/components/record.less
+++ b/sugarcrm/styleguide/less/clients/base/components/record.less
@@ -127,12 +127,14 @@
     display: inline-block;
     position: relative;
     padding-left: 15px;
-    min-height: 0;
+    min-height: 1px;
     height: 100%;
     &.vis_action_hidden {
-      &> span,
-      &> div {
-        display: none;
+      &> .normal {
+        &> .detail,
+        &> .edit {
+          display: none;
+        }
       }
     }
     &.vis_action_hidden:first-of-type:last-of-type {
